Fix build with libdiscid < 0.4.0

discid_has_feature() was introduced in libdiscid version 0.4.0 and
discid_get_mcn() in version 0.3.0. Add fallback functions when
compiling against older versions to maintain compatibility.

https://bugzilla.gnome.org/show_bug.cgi?id=764535